--- a/PlayerList.csproj
+++ b/PlayerList.csproj
@@ -14,8 +14,14 @@
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="protobuf-net">
+      <HintPath>libs\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="VintagestoryAPI">
       <HintPath>libs\VintagestoryAPI.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="resources\assets\playerlist\textures\" />
   </ItemGroup>
 </Project>
