--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 max_line_length = 9999
 
-[{*.html,*.js,*.json,*.css,*.scss,*.yml}]
+[*.json]
 indent_size = 2
 
 [*.cs]
